<resources>
    <string name="app_name">Cheetah Food Services</string>

    <string name="firebase_web_client_id">796777611334-ft6vop9d5juh8m1bmgav4qa0ils5hedv.apps.googleusercontent.com</string>
    <string name="firebase_database_uri">https://duan1-a7273-default-rtdb.asia-southeast1.firebasedatabase.app</string>
    <string name="firebase_storage_uri">gs://duan1-a7273.appspot.com</string>

    <string name="facebook_app_id">510459427674407</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">6e6897a3ad0f0b900213ab0f05eaeb7c</string>

    <string name="auth_title_sign_in">Sign in to your account</string>
    <string name="auth_title_sign_up">Sign up for an account</string>
    <string name="auth_btn_sign_in">Sign in</string>
    <string name="auth_btn_sign_up">Sign up</string>
    <string name="auth_switch_sign_in">Dont have an account?<b> <font color="#E62B37">Sign up</font></b></string>
    <string name="auth_switch_sign_up">Already have an account? <b><font color="#E62B37">Sign in</font></b></string>
    <string name="auth_input_email"><i>Email</i><font color="#E62B37">*</font></string>
    <string name="auth_input_password"><i>Password</i><font color="#E62B37">*</font></string>
    <string name="auth_input_password_confirm"><i>Confirm Password</i><font color="#E62B37">*</font></string>
    <string name="address">Postal Address</string>
    <string name="date">Birthdate</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="nickName">Nickname</string>
    <string name="fullName">Full Name</string>
    <string name="newPassword">New password</string>
    <string name="confirmNewPassword">Confirm new password</string>
</resources>