<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/register_iv_logo"
        android:layout_width="222dp"
        android:layout_height="145dp"
        android:layout_marginTop="4dp"
        android:src="@mipmap/iv_login_screen_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="Cheetah Food Service"
        android:textColor="#F13A45"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="Sign up for free"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="212dp"
        android:text="@string/auth_input_email"
        android:textColor="#474444"
        android:textSize="18dp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_edt_email"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_login_edt"
        android:elevation="10dp"
        android:hint="Email or Phone Number"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="#888787"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_txt_email" />

    <TextView
        android:id="@+id/register_txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="328dp"
        android:text="@string/auth_input_password"
        android:textColor="#474444"
        android:textSize="18dp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_edt_password"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_login_edt"
        android:drawableEnd="@drawable/ic_visibility_off"
        android:elevation="10dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="#888787"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_txt_password" />

    <TextView
        android:id="@+id/register_txt_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="444dp"
        android:text="@string/auth_input_password_confirm"
        android:textColor="#474444"
        android:textSize="18dp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_edt_confirm_password"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_login_edt"
        android:drawableEnd="@drawable/ic_visibility_off"
        android:elevation="10dp"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="#888787"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_txt_confirm_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn_signUp"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/custom_login_btn"
        android:text="Sign up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_edt_confirm_password" />

    <TextView
        android:id="@+id/register_txt_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/auth_switch_sign_up"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn_signUp" />
</androidx.constraintlayout.widget.ConstraintLayout>