<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.RegisterProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/registerProfile_linearLayout_statusBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/registerProfile_iv_back"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_margin="15sp"
                    android:background="@drawable/custom_forgotpassword_txt"
                    android:src="@drawable/ic_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="17sp"
                    android:text="Fill in your bio"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/registerProfile_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="20sp"
                android:lineHeight="40sp"
                android:text="This data will be displayed in your account profile for security"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerProfile_linearLayout_statusBar" />

            <TextView
                android:id="@+id/registerProfile_txt_fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="30sp"
                android:text="@string/fullName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/registerProfile_edt_fullName"
                android:layout_width="330sp"
                android:layout_height="51sp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="16sp"
                android:background="@drawable/custom_login_edt"
                android:elevation="10sp"
                android:hint="Full name"
                android:padding="10sp"
                android:paddingStart="20sp"
                android:textColor="@color/black"
                android:textColorHint="#888787"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/registerProfile_txt_nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/nickName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/registerProfile_edt_nickName"
                android:layout_width="330sp"
                android:layout_height="51sp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="16sp"
                android:background="@drawable/custom_login_edt"
                android:elevation="10sp"
                android:hint="Nickname"
                android:padding="10sp"
                android:paddingStart="20sp"
                android:textColor="@color/black"
                android:textColorHint="#888787"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/registerProfile_txt_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/phoneNumber"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/registerProfile_edt_phoneNumber"
                android:layout_width="330sp"
                android:layout_height="51sp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="16sp"
                android:background="@drawable/custom_login_edt"
                android:elevation="10sp"
                android:hint="Phone number"
                android:inputType="number"
                android:padding="10sp"
                android:paddingStart="20sp"
                android:textColor="@color/black"
                android:textColorHint="#888787"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/registerProfile_txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/date"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/registerProfile_edt_date"
                android:layout_width="330sp"
                android:layout_height="51sp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="16sp"
                android:background="@drawable/custom_login_edt"
                android:elevation="10sp"
                android:hint="Date or Birthday"
                android:padding="10sp"
                android:paddingStart="20sp"
                android:textColor="@color/black"
                android:textColorHint="#888787"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/registerProfile_txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/address"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/registerProfile_edt_address"
                android:layout_width="330sp"
                android:layout_height="51sp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="16sp"
                android:background="@drawable/custom_login_edt"
                android:elevation="10sp"
                android:hint="Address"
                android:padding="10sp"
                android:paddingStart="20sp"
                android:textColor="@color/black"
                android:textColorHint="#888787"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerProfile_btn_next"
                android:layout_width="360sp"
                android:layout_height="51sp"
                android:layout_gravity="center"
                android:layout_marginTop="40sp"
                android:layout_marginBottom="25sp"
                android:background="@drawable/custom_login_btn"
                android:text="Complete Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>