<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/register_iv_logo"
            android:layout_width="222sp"
            android:layout_height="145sp"
            android:layout_marginTop="4sp"
            android:src="@mipmap/iv_login_screen_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="144sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="104sp"
            android:background="@color/white"
            android:gravity="center"
            android:text="Cheetah Food Service"
            android:textColor="#F13A45"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_hookme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="164sp"
            android:text="Sign up for free"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="vertical"
            android:padding="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_hookme">

            <TextView
                android:id="@+id/register_txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:text="@string/auth_input_email"
                android:textColor="#474444"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/register_edt_email"
                android:layout_width="360sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:background="@drawable/custom_login_edt"
                android:elevation="10sp"
                android:hint="Email or Phone Number"
                android:padding="10sp"
                android:paddingStart="20sp"
                android:textColor="@color/black"
                android:textColorHint="#888787"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_txt_email" />

            <TextView
                android:id="@+id/register_txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="12sp"
                android:text="@string/auth_input_password"
                android:textColor="#474444"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/register_edt_password"
                android:layout_width="360sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:background="@drawable/custom_login_edt"
                android:drawableEnd="@drawable/ic_visibility_off"
                android:elevation="10sp"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="10sp"
                android:paddingStart="20sp"
                android:textColor="@color/black"
                android:textColorHint="#888787"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_txt_password" />

            <TextView
                android:id="@+id/register_txt_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="12sp"
                android:text="@string/auth_input_password_confirm"
                android:textColor="#474444"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/register_edt_confirm_password"
                android:layout_width="360sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:background="@drawable/custom_login_edt"
                android:drawableEnd="@drawable/ic_visibility_off"
                android:elevation="10sp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:padding="10sp"
                android:paddingStart="20sp"
                android:textColor="@color/black"
                android:textColorHint="#888787"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn_signUp"
            android:layout_width="360sp"
            android:layout_height="51sp"
            android:layout_marginTop="56sp"
            android:background="@drawable/custom_login_btn"
            android:text="Sign up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_form" />

        <TextView
            android:id="@+id/register_txt_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/auth_switch_sign_up"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_btn_signUp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>